[gd_scene load_steps=11 format=3 uid="uid://qt5kcyso6hnm"]

[ext_resource type="Script" path="res://scripts/scenes/gameplay/stage.gd" id="1_ceygn"]
[ext_resource type="Resource" uid="uid://jjxabo4gpfrx" path="res://data/stage/test_stage.tres" id="2_tgjsw"]
[ext_resource type="Script" path="res://scripts/scenes/npc_ai/rat_director.gd" id="3_7c5ai"]
[ext_resource type="Resource" uid="uid://1e8a0ady6trv" path="res://data/npc/enemy/base_rat.tres" id="4_y3lnl"]

[sub_resource type="NavigationMesh" id="NavigationMesh_5byed"]
vertices = PackedVector3Array(-30.2113, -16.6331, -36.1202, -37.2113, -16.6331, -36.1202, -37.2113, -16.6331, -26.6202, -23.2113, -16.6331, -36.1202, -30.2113, -16.6331, -36.1202, -37.2113, -16.6331, -26.6202, -10.7113, -16.6331, -19.1202, -8.9613, -16.6331, -19.3702, -9.2113, -16.6331, -36.1202, -16.2113, -16.6331, -36.1202, -10.7113, -16.6331, -17.1202, -10.7113, -16.6331, -19.1202, -16.2113, -16.6331, -36.1202, -23.2113, -16.6331, -36.1202, -37.2113, -16.6331, -26.6202, -37.2113, -16.6331, -17.1202, -8.9613, -16.6331, -19.3702, -6.2113, -16.6331, -19.3702, -5.9613, -16.6331, -36.1202, -9.2113, -16.6331, -36.1202, 37.2887, -16.6331, -27.6202, 37.2887, -16.6331, -36.1202, 26.2887, -16.6331, -36.1202, -4.4613, -16.6331, -13.6202, 1.7887, -16.6331, -3.1202, 7.2887, -16.6331, -3.1202, -4.4613, -16.6331, -19.1202, -5.9613, -16.6331, -36.1202, -6.2113, -16.6331, -19.3702, -4.4613, -16.6331, -19.1202, 4.7887, -16.6331, -36.1202, 7.2887, -16.6331, -3.1202, 7.5387, -16.6331, -1.3702, 37.2887, -16.6331, -1.6202, 37.2887, -16.6331, -10.3702, 37.2887, -16.6331, -18.8702, 26.2887, -16.6331, -36.1202, 15.5387, -16.6331, -36.1202, -4.4613, -16.6331, -19.1202, 7.2887, -16.6331, -3.1202, 37.2887, -16.6331, -10.3702, 37.2887, -16.6331, -18.8702, 37.2887, -16.6331, -27.6202, 26.2887, -16.6331, -36.1202, 15.5387, -16.6331, -36.1202, 4.7887, -16.6331, -36.1202, -4.4613, -16.6331, -19.1202, -9.7113, -13.8831, -18.3702, -9.7113, -13.8831, -14.1202, -5.4613, -13.8831, -14.1202, -5.4613, -13.8831, -18.3702, -9.4613, -16.6331, -18.1202, -9.4613, -16.6331, -14.3702, -5.7113, -16.6331, -14.3702, -5.7113, -16.6331, -18.1202, -20.2113, -16.6331, -3.1202, -14.7113, -16.6331, -3.1202, -10.7113, -16.6331, -13.6202, -10.7113, -16.6331, -17.1202, -37.2113, -16.6331, -17.1202, -37.2113, -16.6331, -9.3702, -37.2113, -16.6331, -1.6202, -20.4613, -16.6331, -1.3702, -20.2113, -16.6331, -3.1202, -37.2113, -16.6331, -9.3702, -10.4613, -16.6331, -13.1202, -10.7113, -16.6331, -13.6202, -14.7113, -16.6331, -3.1202, -14.2113, -16.6331, -2.8702, -10.4613, -16.6331, -13.1202, -14.2113, -16.6331, -2.8702, -14.2113, -16.6331, -0.870201, 1.2887, -16.6331, -0.870201, 1.2887, -16.6331, -2.8702, -4.7113, -16.6331, -13.1202, 1.7887, -16.6331, -3.1202, -4.4613, -16.6331, -13.6202, -4.7113, -16.6331, -13.1202, 1.2887, -16.6331, -2.8702, -19.4613, -13.8831, -2.1202, -19.4613, -13.8831, 2.1298, -15.2113, -13.8831, 2.1298, -15.2113, -13.8831, -2.1202, 2.2887, -13.8831, -2.1202, 2.2887, -13.8831, 2.1298, 6.5387, -13.8831, 2.1298, 6.5387, -13.8831, -2.1202, -19.2113, -16.6331, -1.8702, -19.2113, -16.6331, 1.8798, -15.4613, -16.6331, 1.8798, -15.4613, -16.6331, -1.8702, 2.5387, -16.6331, -1.8702, 2.5387, -16.6331, 1.8798, 6.2887, -16.6331, 1.8798, 6.2887, -16.6331, -1.8702, -37.2113, -16.6331, 1.6298, -20.4613, -16.6331, 1.3798, -20.4613, -16.6331, -1.3702, -37.2113, -16.6331, -1.6202, 7.5387, -16.6331, -1.3702, 7.5387, -16.6331, 1.3798, 37.2887, -16.6331, 1.6298, 37.2887, -16.6331, -1.6202, -14.2113, -16.6331, 0.879799, 1.2887, -16.6331, 0.879799, 1.2887, -16.6331, -0.870201, -14.2113, -16.6331, -0.870201, 1.2887, -16.6331, 2.8798, 1.2887, -16.6331, 0.879799, -14.2113, -16.6331, 0.879799, -14.2113, -16.6331, 2.8798, -14.7113, -16.6331, 3.1298, -14.7113, -16.6331, 36.1298, -5.7113, -16.6331, 36.1298, 1.2887, -16.6331, 2.8798, -14.2113, -16.6331, 2.8798, -14.7113, -16.6331, 3.1298, -5.7113, -16.6331, 36.1298, 3.5387, -16.6331, 36.1298, 3.5387, -16.6331, 3.1298, -37.2113, -16.6331, 27.3798, -37.2113, -16.6331, 36.1298, -25.9613, -16.6331, 36.1298, -20.2113, -16.6331, 3.1298, -20.4613, -16.6331, 1.3798, -37.2113, -16.6331, 1.6298, -37.2113, -16.6331, 10.1298, -20.2113, -16.6331, 3.1298, -37.2113, -16.6331, 10.1298, -37.2113, -16.6331, 18.8798, -25.9613, -16.6331, 36.1298, -14.7113, -16.6331, 36.1298, -14.7113, -16.6331, 3.1298, -37.2113, -16.6331, 18.8798, -37.2113, -16.6331, 27.3798, -25.9613, -16.6331, 36.1298, 29.2887, -16.6331, 36.1298, 37.2887, -16.6331, 36.1298, 37.2887, -16.6331, 27.3798, 21.2887, -16.6331, 36.1298, 29.2887, -16.6331, 36.1298, 37.2887, -16.6331, 27.3798, 21.2887, -16.6331, 36.1298, 37.2887, -16.6331, 27.3798, 37.2887, -16.6331, 18.8798, 13.2887, -16.6331, 36.1298, 37.2887, -16.6331, 10.1298, 7.2887, -16.6331, 3.1298, 5.2887, -16.6331, 3.1298, 5.2887, -16.6331, 36.1298, 13.2887, -16.6331, 36.1298, 37.2887, -16.6331, 18.8798, 37.2887, -16.6331, 1.6298, 7.5387, -16.6331, 1.3798, 7.2887, -16.6331, 3.1298, 37.2887, -16.6331, 10.1298, 3.5387, -16.6331, 36.1298, 5.2887, -16.6331, 36.1298, 5.2887, -16.6331, 3.1298, 3.5387, -16.6331, 3.1298)
polygons = [PackedInt32Array(2, 1, 0), PackedInt32Array(4, 3, 5), PackedInt32Array(7, 6, 8), PackedInt32Array(8, 6, 9), PackedInt32Array(11, 10, 12), PackedInt32Array(12, 10, 13), PackedInt32Array(13, 10, 14), PackedInt32Array(14, 10, 15), PackedInt32Array(16, 19, 17), PackedInt32Array(17, 19, 18), PackedInt32Array(22, 21, 20), PackedInt32Array(24, 23, 25), PackedInt32Array(25, 23, 26), PackedInt32Array(28, 27, 29), PackedInt32Array(29, 27, 30), PackedInt32Array(32, 31, 33), PackedInt32Array(33, 31, 34), PackedInt32Array(35, 40, 36), PackedInt32Array(36, 40, 37), PackedInt32Array(37, 40, 39), PackedInt32Array(37, 39, 38), PackedInt32Array(43, 42, 41), PackedInt32Array(46, 45, 44), PackedInt32Array(50, 49, 47), PackedInt32Array(47, 49, 48), PackedInt32Array(54, 53, 51), PackedInt32Array(51, 53, 52), PackedInt32Array(57, 56, 58), PackedInt32Array(58, 56, 55), PackedInt32Array(58, 55, 60), PackedInt32Array(58, 60, 59), PackedInt32Array(62, 61, 63), PackedInt32Array(63, 61, 64), PackedInt32Array(68, 67, 65), PackedInt32Array(65, 67, 66), PackedInt32Array(70, 69, 71), PackedInt32Array(71, 69, 74), PackedInt32Array(71, 74, 73), PackedInt32Array(71, 73, 72), PackedInt32Array(78, 77, 75), PackedInt32Array(75, 77, 76), PackedInt32Array(82, 81, 79), PackedInt32Array(79, 81, 80), PackedInt32Array(86, 85, 83), PackedInt32Array(83, 85, 84), PackedInt32Array(90, 89, 87), PackedInt32Array(87, 89, 88), PackedInt32Array(94, 93, 91), PackedInt32Array(91, 93, 92), PackedInt32Array(96, 95, 97), PackedInt32Array(97, 95, 98), PackedInt32Array(99, 102, 100), PackedInt32Array(100, 102, 101), PackedInt32Array(106, 105, 103), PackedInt32Array(103, 105, 104), PackedInt32Array(110, 109, 107), PackedInt32Array(107, 109, 108), PackedInt32Array(113, 112, 111), PackedInt32Array(115, 114, 116), PackedInt32Array(116, 114, 119), PackedInt32Array(116, 119, 117), PackedInt32Array(117, 119, 118), PackedInt32Array(122, 121, 120), PackedInt32Array(124, 123, 125), PackedInt32Array(125, 123, 126), PackedInt32Array(127, 132, 128), PackedInt32Array(128, 132, 129), PackedInt32Array(129, 132, 130), PackedInt32Array(130, 132, 131), PackedInt32Array(135, 134, 133), PackedInt32Array(138, 137, 136), PackedInt32Array(141, 140, 139), PackedInt32Array(143, 142, 144), PackedInt32Array(144, 142, 145), PackedInt32Array(147, 146, 148), PackedInt32Array(148, 146, 151), PackedInt32Array(148, 151, 150), PackedInt32Array(148, 150, 149), PackedInt32Array(153, 152, 154), PackedInt32Array(154, 152, 155), PackedInt32Array(159, 158, 156), PackedInt32Array(156, 158, 157)]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5w3cv"]

[sub_resource type="BoxMesh" id="BoxMesh_66rt5"]
material = SubResource("StandardMaterial3D_5w3cv")

[sub_resource type="BoxShape3D" id="BoxShape3D_vla6n"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_unoi0"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_gigyi"]
material = SubResource("StandardMaterial3D_unoi0")

[node name="Stage" type="Node3D"]
script = ExtResource("1_ceygn")
stage_data = ExtResource("2_tgjsw")
characterCamera = NodePath("nav_mesh/level/level_camera")

[node name="lighting" type="Node" parent="."]

[node name="main_light" type="DirectionalLight3D" parent="lighting"]
transform = Transform3D(0.999999, 0.00116767, 0.000646839, -0.00101493, 0.35035, 0.936618, 0.000867039, -0.936618, 0.350351, -98.5453, 45.7553, -18.8388)

[node name="nav_mesh" type="NavigationRegion3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 17.1449, 0)
navigation_mesh = SubResource("NavigationMesh_5byed")

[node name="level" type="Node" parent="nav_mesh"]

[node name="floor" type="MeshInstance3D" parent="nav_mesh/level"]
transform = Transform3D(75.4226, 0, 0, 0, 0.122984, 0, 0, 0, 73.2404, 0, 0, 0)
mesh = SubResource("BoxMesh_66rt5")
skeleton = NodePath("../../..")

[node name="floor_collider" type="StaticBody3D" parent="nav_mesh/level/floor"]

[node name="floor_shape" type="CollisionShape3D" parent="nav_mesh/level/floor/floor_collider"]
shape = SubResource("BoxShape3D_vla6n")

[node name="level_camera" type="Camera3D" parent="nav_mesh/level"]
transform = Transform3D(1, 0, 0, 0, 0.734915, 0.67816, 0, -0.67816, 0.734915, 1.255, 15.438, 25.303)

[node name="blocks" type="Node" parent="nav_mesh/level"]

[node name="block" type="MeshInstance3D" parent="nav_mesh/level/blocks"]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 4.53632, 0.261762, 0)
mesh = SubResource("BoxMesh_gigyi")
skeleton = NodePath("../../../..")

[node name="block_collider" type="StaticBody3D" parent="nav_mesh/level/blocks/block"]

[node name="block_shape" type="CollisionShape3D" parent="nav_mesh/level/blocks/block/block_collider"]
shape = SubResource("BoxShape3D_vla6n")

[node name="NavigationObstacle3D" type="NavigationObstacle3D" parent="nav_mesh/level/blocks/block"]

[node name="block2" type="MeshInstance3D" parent="nav_mesh/level/blocks"]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, -17.3011, 0.261762, 0)
mesh = SubResource("BoxMesh_gigyi")
skeleton = NodePath("../../../..")

[node name="block_collider" type="StaticBody3D" parent="nav_mesh/level/blocks/block2"]

[node name="block_shape" type="CollisionShape3D" parent="nav_mesh/level/blocks/block2/block_collider"]
shape = SubResource("BoxShape3D_vla6n")

[node name="NavigationObstacle3D" type="NavigationObstacle3D" parent="nav_mesh/level/blocks/block2"]

[node name="block3" type="MeshInstance3D" parent="nav_mesh/level/blocks"]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, -7.68655, 0.261762, -16.1559)
mesh = SubResource("BoxMesh_gigyi")
skeleton = NodePath("../../../..")

[node name="block_collider" type="StaticBody3D" parent="nav_mesh/level/blocks/block3"]

[node name="block_shape" type="CollisionShape3D" parent="nav_mesh/level/blocks/block3/block_collider"]
shape = SubResource("BoxShape3D_vla6n")

[node name="NavigationObstacle3D" type="NavigationObstacle3D" parent="nav_mesh/level/blocks/block3"]

[node name="player_spawn_points" type="Node" parent="nav_mesh/level"]

[node name="player_1" type="Node3D" parent="nav_mesh/level/player_spawn_points"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 24.5339, 8.32275, -16.6851)

[node name="enemy_spawn_points" type="Node" parent="nav_mesh/level"]

[node name="mousehole_1" type="Node3D" parent="nav_mesh/level/enemy_spawn_points"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -18.7278, 3.56802, -24.1988)

[node name="mousehold_2" type="Node3D" parent="nav_mesh/level/enemy_spawn_points"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.99268, 4.17987, -23.4602)

[node name="npcs" type="Node" parent="nav_mesh/level"]

[node name="enemies" type="Node" parent="nav_mesh/level/npcs"]

[node name="rat_director" type="Node" parent="."]
script = ExtResource("3_7c5ai")
rat_list = Array[Resource("res://scripts/scenes/npc_ai/rat_data.gd")]([ExtResource("4_y3lnl")])
enemy_node_path = NodePath("../nav_mesh/level/npcs/enemies")

[node name="players" type="Node" parent="."]
